# Py4Stats

./: .gitignore  INTRODUCTION.md  LICENSE  README.md  __init__.py  _quarto.yml  eda_tools.py  index.qmd  introduction.qmd  py4stats  pyproject.toml  reference.md  reference.qmd  regression_tools.py  setup.ipynb  setup.py  theme.scss
articles/: eda_tools_development_status.qmd  eda_tools開発状況.md  eda_tools開発状況.xlsx  eda_tools開発状況の表.md  narwhals_in_py4stats.md  narwhals_in_py4stats.qmd  narwhalsについての考察  narwhalsについての考察.md  narwhalsについての考察.qmd  project_guide.qmd  release_notes.qmd  review_data_wrangling.qmd  scaling_up_regression.md  scaling_up_regression.qmd  学食地図2.html  開発記録.md  開発記録.qmd
docs/: index.html  index.qmd  introduction.html  introduction.qmd  reference.html  reference.qmd  robots.txt  search.json  sitemap.xml
man/: Blinder_Oaxaca.md  Blinder_Oaxaca.qmd  Heckit_from_formula.md  Heckit_from_formula.qmd  Pareto_plot.md  Pareto_plot.qmd  arg_match.md  arg_match.qmd  assert_dtype.md  assert_dtype.qmd  bind_rows.qmd  coefplot.md  coefplot.qmd  compare_df_cols.md  compare_df_cols.qmd  compare_group_stats.md  compare_group_stats.qmd  compare_mfx  compare_mfx.md  compare_mfx.qmd  compare_ols.md  compare_ols.qmd  diagnose.md  diagnose.qmd  diagnose_category.md  diagnose_category.qmd  expand_complete.qmd  filtering_out.md  filtering_out.qmd  freq_table.html  freq_table.md  freq_table.qmd  glance.md  glance.qmd  grouped_operation.qmd  heckitmfx_compute.md  heckitmfx_compute.qmd  info_gain.qmd  is_dtype.md  is_dtype.qmd  (+40 more)
py4stats/: __init__.py  bilding_block.py  eda_pl.py  (+5 more)
(+235 files in other folders)
