[project]
name = 'py4stats'
version = '0.3.1'
license = "MIT"

description = "Simple helper tools of statistical analysis for Python."

authors = [
    { name = "Hiroto Tensho"}
]

dependencies = [
    'matplotlib>=3.10.8',
    'narwhals>=2.15.0',
    'numpy>=2.4.0',
    'palmerpenguins>=0.1.4',
    'pandas>=2.3.3',
    'pandas_flavor>=0.8.1',
    'patsy>=1.0.2',
    'polars>=1.36.1',
    'py4etrics>=0.1.9',
    'pytest>=9.0.2',
    'regex>=2025.11.3',
    'scipy>=1.16.3',
    'seaborn>=0.13.2',
    'setuptools>=80.9.0',
    'statsmodels>=0.14.6',
    'tidypolars>=0.3.2',
    'varname>=0.15.1',
    'wooldridge>=0.5.0'
]

[project.urls]
Repository = "https://github.com/Hirototensho/Py4Stats"
Documentation = "https://hirototensho.github.io/Py4Stats/index.html"
Changelog = "https://hirototensho.github.io/Py4Stats/articles/release_notes.html"